crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_all_typeless_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel


class EnqueueJobResponse(BaseModel):
    status: int
