crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_all_typeless_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Response

from .handlers import Handlers


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/jobs")
    async def enqueue_job() -> Response:
        result = await handlers.enqueue_job()
        if result.status not in (202, 204):
            return Response(
                content="handler returned undeclared status", status_code=500
            )
        return Response(status_code=result.status)

    return router
