crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_errors_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, HTTPException, Response

from .handlers import Handlers


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.put("/api/users/{id}")
    async def upsert_user(id: str) -> Response:
        try:
            result = await handlers.upsert_user(id=id)
            if result.status not in (200, 201):
                return Response(
                    content="handler returned undeclared status", status_code=500
                )
            if result.status in (200, 201) and result.body is None:
                return Response(
                    content="handler returned no body for a typed status",
                    status_code=500,
                )
            if result.body is not None:
                return Response(
                    content=result.body.model_dump_json(),
                    status_code=result.status,
                    media_type="application/json",
                )
            return Response(status_code=result.status)
        except Exception as e:
            if str(e) == "ValidationError":
                raise HTTPException(status_code=400, detail="ValidationError") from e
            if str(e) == "Unauthorized":
                raise HTTPException(status_code=401, detail="Unauthorized") from e
            raise

    return router
