crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_inputs_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

from typing import Any

import httpx

from .models import Job, RestartJobResponse


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def restart_job(
        self,
        id: str,
        *,
        priority: int = 5,
        authorization: str,
        trace_id: str | None = None,
    ) -> RestartJobResponse:
        params: dict[str, Any] = {}
        if priority is not None:
            params["priority"] = priority
        headers: dict[str, str] = {}
        headers["Authorization"] = authorization
        if trace_id is not None:
            headers["Trace-Id"] = trace_id
        response = await self.client.post(
            f"{self.base_url}/api/jobs/{id}/restart", params=params, headers=headers
        )
        response.raise_for_status()
        response_body: Job | None = None
        if response.content:
            response_body = Job.model_validate(response.json())
        return RestartJobResponse(status=response.status_code, body=response_body)
