crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_inputs_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Header, Response

from .handlers import Handlers


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/jobs/{id}/restart")
    async def restart_job(
        id: str,
        priority: int = 5,
        authorization: str = Header(alias="Authorization"),
        trace_id: str | None = Header(None, alias="Trace-Id"),
    ) -> Response:
        result = await handlers.restart_job(
            id=id, priority=priority, authorization=authorization, trace_id=trace_id
        )
        if result.status not in (200, 202, 204):
            return Response(
                content="handler returned undeclared status", status_code=500
            )
        if result.status in (200, 202) and result.body is None:
            return Response(
                content="handler returned no body for a typed status", status_code=500
            )
        if result.status in (204,) and result.body is not None:
            return Response(
                content="handler returned a body for a bodyless status", status_code=500
            )
        if result.body is not None:
            return Response(
                content=result.body.model_dump_json(),
                status_code=result.status,
                media_type="application/json",
            )
        return Response(status_code=result.status)

    return router
