crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_mixed_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import UpdateUserResponse, User


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def update_user(self, id: str) -> UpdateUserResponse:
        response = await self.client.put(f"{self.base_url}/api/users/{id}")
        response.raise_for_status()
        response_body: User | None = None
        if response.content:
            response_body = User.model_validate(response.json())
        return UpdateUserResponse(status=response.status_code, body=response_body)
